--- a/12. Associative Arrays - Lab/ConsoleApp1/01. Count Real Numbers.csproj
+++ b/12. Associative Arrays - Lab/ConsoleApp1/01. Count Real Numbers.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{38261325-C0FB-4C8B-94F4-636BEB01B89C}</ProjectGuid>
+    <ProjectGuid>{B4568AD0-7603-4D6E-A9C6-388A2B5E66E9}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_03.Word_Synonyms</RootNamespace>
-    <AssemblyName>_03.Word_Synonyms</AssemblyName>
+    <RootNamespace>ConsoleApp1</RootNamespace>
+    <AssemblyName>ConsoleApp1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
